--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
+    <color name="light_grey">#D1D1D1</color>
     <color name="back_grey">#ADADAD</color>
     <color name="select_grey">#868686</color>
     <color  name="transparent">#00868686</color>
