--- a/app/src/main/res/layout/fragment_color_select_dialog.xml
+++ b/app/src/main/res/layout/fragment_color_select_dialog.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_height="wrap_content"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -25,7 +25,7 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="wrap_content"
 
         >
 
